colang-cli/tests/samples/good/shadow.co
fun main() {
  var y = -100;
  var x = {
    var x = 2;
    var y = 3;
    x + y
  };
  assert(x == 5);
}
