colang-cli/tests/samples/compile_error/is_expr_pointers_to_different_types.co
fun main() {
  var x = 2, y = true;
  assert(&x is &y);
}
